<resources>
    <string name="app_name">TallerUnimag</string>
    <string name="usuario">Usuario</string>
    <string name="clave">Clave</string>
    <string name="mensajeError">Datos Invalidos</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="Ingresar">Ingresar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Operaciones">Operaciones</string>
    <string name="dato1">Numero 1</string>
    <string name="dato2">Numero 2</string>
    <string name="restar">Restar</string>
    <string name="sumar">Sumar</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="dividir">Dividir</string>
    <string name="mayor">Mayor</string>
    <string name="mcm">MCM</string>
    <string name="mcd">MCD</string>
</resources>