<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="156dp"
        android:layout_height="55dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="617dp"
        android:gravity="center"
        android:text="@string/Bienvenido"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="338dp"
        android:layout_height="390dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.603">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:gravity="center"
            android:text="@string/usuario"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edtusuario"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:gravity="center"
            android:text="@string/clave"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edtclave"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:ems="10"
            android:inputType="textPersonName|textPassword" />

        <Button
            android:id="@+id/btningresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Ingresar" />

        <Button
            android:id="@+id/btncancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Cancelar" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>